Fix checkbox covering button on mobile

--- a/styles.css
+++ b/styles.css
@@ -252,5 +252,12 @@ input[type="checkbox"]{
         font-size: 2em; 
         padding: 0;
     }
+
+    input[type="checkbox"]{
+        transform: scale(4);
+        margin-top: 5%;
+        margin-bottom: 15%;
+    }
+    
 }
 
